vezba04/semantic/semantic.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 function: type _ID $@1 _LPAREN parameter _RPAREN body

    6 type: _TYPE

    7 parameter: %empty
    8          | type _ID

    9 body: _LBRACKET variable_list statement_list _RBRACKET

   10 variable_list: %empty
   11              | variable_list variable

   12 $@2: %empty

   13 variable: type $@2 ids _SEMICOLON

   14 ids: _ID
   15    | ids _COMMA _ID

   16 statement_list: %empty
   17               | statement_list statement

   18 statement: compound_statement
   19          | assignment_statement
   20          | if_statement
   21          | return_statement

   22 compound_statement: _LBRACKET statement_list _RBRACKET

   23 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   24 num_exp: exp
   25        | num_exp _AROP exp

   26 exp: literal
   27    | _ID
   28    | _ID _POSTINC
   29    | function_call
   30    | _LPAREN num_exp _RPAREN

   31 literal: _INT_NUMBER
   32        | _UINT_NUMBER

   33 $@3: %empty

   34 function_call: _ID $@3 _LPAREN argument _RPAREN

   35 argument: %empty
   36         | num_exp

   37 if_statement: if_part
   38             | if_part _ELSE statement

   39 if_part: _IF _LPAREN rel_exp _RPAREN statement

   40 rel_exp: num_exp _RELOP num_exp

   41 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 6
_IF (259) 39
_ELSE (260) 38
_RETURN (261) 41
_ID (262) 5 8 14 15 23 27 28 34
_INT_NUMBER (263) 31
_UINT_NUMBER (264) 32
_LPAREN (265) 5 30 34 39
_RPAREN (266) 5 30 34 39
_LBRACKET (267) 9 22
_RBRACKET (268) 9 22
_ASSIGN (269) 23
_SEMICOLON (270) 13 23 41
_AROP (271) 25
_RELOP (272) 40
_COMMA (273) 15
_POSTINC (274) 28
ONLY_IF (275)


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
program (22)
    on left: 1, on right: 0
function_list (23)
    on left: 2 3, on right: 1 3
function (24)
    on left: 5, on right: 2 3
$@1 (25)
    on left: 4, on right: 5
type (26)
    on left: 6, on right: 5 8 13
parameter (27)
    on left: 7 8, on right: 5
body (28)
    on left: 9, on right: 5
variable_list (29)
    on left: 10 11, on right: 9 11
variable (30)
    on left: 13, on right: 11
$@2 (31)
    on left: 12, on right: 13
ids (32)
    on left: 14 15, on right: 13 15
statement_list (33)
    on left: 16 17, on right: 9 17 22
statement (34)
    on left: 18 19 20 21, on right: 17 38 39
compound_statement (35)
    on left: 22, on right: 18
assignment_statement (36)
    on left: 23, on right: 19
num_exp (37)
    on left: 24 25, on right: 23 25 30 36 40 41
exp (38)
    on left: 26 27 28 29 30, on right: 24 25
literal (39)
    on left: 31 32, on right: 26
function_call (40)
    on left: 34, on right: 29
$@3 (41)
    on left: 33, on right: 34
argument (42)
    on left: 35 36, on right: 34
if_statement (43)
    on left: 37 38, on right: 20
if_part (44)
    on left: 39, on right: 37 38
rel_exp (45)
    on left: 40, on right: 39
return_statement (46)
    on left: 41, on right: 21


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4
    type           go to state 5


State 1

    6 type: _TYPE .

    $default  reduce using rule 6 (type)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7
    type      go to state 5


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    5 function: type . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    5 function: type _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 9

    5 function: type _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 10


State 10

    5 function: type _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 1

    $default  reduce using rule 7 (parameter)

    type       go to state 11
    parameter  go to state 12


State 11

    8 parameter: type . _ID

    _ID  shift, and go to state 13


State 12

    5 function: type _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 14


State 13

    8 parameter: type _ID .

    $default  reduce using rule 8 (parameter)


State 14

    5 function: type _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 15

    body  go to state 16


State 15

    9 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 10 (variable_list)

    variable_list  go to state 17


State 16

    5 function: type _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 5 (function)


State 17

    9 body: _LBRACKET variable_list . statement_list _RBRACKET
   11 variable_list: variable_list . variable

    _TYPE  shift, and go to state 1

    $default  reduce using rule 16 (statement_list)

    type            go to state 18
    variable        go to state 19
    statement_list  go to state 20


State 18

   13 variable: type . $@2 ids _SEMICOLON

    $default  reduce using rule 12 ($@2)

    $@2  go to state 21


State 19

   11 variable_list: variable_list variable .

    $default  reduce using rule 11 (variable_list)


State 20

    9 body: _LBRACKET variable_list statement_list . _RBRACKET
   17 statement_list: statement_list . statement

    _IF        shift, and go to state 22
    _RETURN    shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25
    _RBRACKET  shift, and go to state 26

    statement             go to state 27
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    return_statement      go to state 32


State 21

   13 variable: type $@2 . ids _SEMICOLON

    _ID  shift, and go to state 33

    ids  go to state 34


State 22

   39 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 35


State 23

   41 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    num_exp        go to state 40
    exp            go to state 41
    literal        go to state 42
    function_call  go to state 43


State 24

   23 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 44


State 25

   22 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 16 (statement_list)

    statement_list  go to state 45


State 26

    9 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 9 (body)


State 27

   17 statement_list: statement_list statement .

    $default  reduce using rule 17 (statement_list)


State 28

   18 statement: compound_statement .

    $default  reduce using rule 18 (statement)


State 29

   19 statement: assignment_statement .

    $default  reduce using rule 19 (statement)


State 30

   20 statement: if_statement .

    $default  reduce using rule 20 (statement)


State 31

   37 if_statement: if_part .
   38             | if_part . _ELSE statement

    _ELSE  shift, and go to state 46

    $default  reduce using rule 37 (if_statement)


State 32

   21 statement: return_statement .

    $default  reduce using rule 21 (statement)


State 33

   14 ids: _ID .

    $default  reduce using rule 14 (ids)


State 34

   13 variable: type $@2 ids . _SEMICOLON
   15 ids: ids . _COMMA _ID

    _SEMICOLON  shift, and go to state 47
    _COMMA      shift, and go to state 48


State 35

   39 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    num_exp        go to state 49
    exp            go to state 41
    literal        go to state 42
    function_call  go to state 43
    rel_exp        go to state 50


State 36

   27 exp: _ID .
   28    | _ID . _POSTINC
   34 function_call: _ID . $@3 _LPAREN argument _RPAREN

    _POSTINC  shift, and go to state 51

    _LPAREN   reduce using rule 33 ($@3)
    $default  reduce using rule 27 (exp)

    $@3  go to state 52


State 37

   31 literal: _INT_NUMBER .

    $default  reduce using rule 31 (literal)


State 38

   32 literal: _UINT_NUMBER .

    $default  reduce using rule 32 (literal)


State 39

   30 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    num_exp        go to state 53
    exp            go to state 41
    literal        go to state 42
    function_call  go to state 43


State 40

   25 num_exp: num_exp . _AROP exp
   41 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 54
    _AROP       shift, and go to state 55


State 41

   24 num_exp: exp .

    $default  reduce using rule 24 (num_exp)


State 42

   26 exp: literal .

    $default  reduce using rule 26 (exp)


State 43

   29 exp: function_call .

    $default  reduce using rule 29 (exp)


State 44

   23 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    num_exp        go to state 56
    exp            go to state 41
    literal        go to state 42
    function_call  go to state 43


State 45

   17 statement_list: statement_list . statement
   22 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 22
    _RETURN    shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25
    _RBRACKET  shift, and go to state 57

    statement             go to state 27
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    return_statement      go to state 32


State 46

   38 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 22
    _RETURN    shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25

    statement             go to state 58
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    return_statement      go to state 32


State 47

   13 variable: type $@2 ids _SEMICOLON .

    $default  reduce using rule 13 (variable)


State 48

   15 ids: ids _COMMA . _ID

    _ID  shift, and go to state 59


State 49

   25 num_exp: num_exp . _AROP exp
   40 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 55
    _RELOP  shift, and go to state 60


State 50

   39 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 61


State 51

   28 exp: _ID _POSTINC .

    $default  reduce using rule 28 (exp)


State 52

   34 function_call: _ID $@3 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 62


State 53

   25 num_exp: num_exp . _AROP exp
   30 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 63
    _AROP    shift, and go to state 55


State 54

   41 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 41 (return_statement)


State 55

   25 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    exp            go to state 64
    literal        go to state 42
    function_call  go to state 43


State 56

   23 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   25 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 65
    _AROP       shift, and go to state 55


State 57

   22 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 22 (compound_statement)


State 58

   38 if_statement: if_part _ELSE statement .

    $default  reduce using rule 38 (if_statement)


State 59

   15 ids: ids _COMMA _ID .

    $default  reduce using rule 15 (ids)


State 60

   40 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    num_exp        go to state 66
    exp            go to state 41
    literal        go to state 42
    function_call  go to state 43


State 61

   39 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 22
    _RETURN    shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25

    statement             go to state 67
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    return_statement      go to state 32


State 62

   34 function_call: _ID $@3 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    $default  reduce using rule 35 (argument)

    num_exp        go to state 68
    exp            go to state 41
    literal        go to state 42
    function_call  go to state 43
    argument       go to state 69


State 63

   30 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 30 (exp)


State 64

   25 num_exp: num_exp _AROP exp .

    $default  reduce using rule 25 (num_exp)


State 65

   23 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 23 (assignment_statement)


State 66

   25 num_exp: num_exp . _AROP exp
   40 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 55

    $default  reduce using rule 40 (rel_exp)


State 67

   39 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 39 (if_part)


State 68

   25 num_exp: num_exp . _AROP exp
   36 argument: num_exp .

    _AROP  shift, and go to state 55

    $default  reduce using rule 36 (argument)


State 69

   34 function_call: _ID $@3 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 70


State 70

   34 function_call: _ID $@3 _LPAREN argument _RPAREN .

    $default  reduce using rule 34 (function_call)
